--- a/games.html
+++ b/games.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel="stylesheet" href="styles.css">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Blue Tables</title>
+<title>Blue Tables - Game Store</title>
 <style>
   body {
     font-family: Arial, sans-serif;
@@ -13,6 +14,12 @@
 
   h1 {
     color: #104794;
+    clear: both; /* ← ADD THIS */
+  }
+
+  .table-container { /* ← ADD THIS */
+    overflow: hidden;
+    margin-bottom: 40px;
   }
 
   table {
@@ -47,69 +54,73 @@
 </head>
 <body>
 
-<h1>Table 1</h1>
+<div class="table-container"> <!-- ← ADD THIS -->
+
+<h1>PC Games</h1>
 <table>
   <tr>
-    <th>Product</th>
+    <th>Game</th>
     <th>Price</th>
-    <th>Quantity</th>
-    <th>Total</th>
-    <th>Remarks</th>
+    <th>Stock</th>
+    <th>Total Value</th>
+    <th>Status</th>
   </tr>
   <tr>
-    <td>Apples</td>
-    <td>KES 20</td>
-    <td>10</td>
-    <td>KES 200</td>
-    <td>Fresh</td>
+    <td>Cyberpunk 2077</td>
+    <td>$49.99</td>
+    <td>15</td>
+    <td>$749.85</td>
+    <td>Hot Seller</td>
   </tr>
   <tr>
-    <td>Oranges</td>
-    <td>KES 60</td>
+    <td>Baldur's Gate 3</td>
+    <td>$59.99</td>
     <td>8</td>
-    <td>KES 480</td>
-    <td>Juicy</td>
+    <td>$479.92</td>
+    <td>GOTY Edition</td>
   </tr>
   <tr>
-    <td>Bananas</td>
-    <td>KES 30</td>
+    <td>Elden Ring</td>
+    <td>$39.99</td>
     <td>12</td>
-    <td>KES 360</td>
-    <td>Ripe</td>
+    <td>$479.88</td>
+    <td>Game of the Year</td>
   </tr>
 </table>
 
-<h1>Table 2</h1>
+<h1>Console Games</h1>
 <table>
   <tr>
-    <th>Farm</th>
-    <th>Location</th>
-    <th>Contacts</th>
-    <th>Products</th>
-    <th>Remarks</th>
+    <th>Game</th>
+    <th>Platform</th>
+    <th>Price</th>
+    <th>Stock</th>
+    <th>Rating</th>
   </tr>
   <tr>
-    <td>Marks</td>
-    <td>Muranga</td>
-    <td>0723456789</td>
-    <td>Mangoes</td>
-    <td>Organic</td>
+    <td>Spider-Man 2</td>
+    <td>PS5</td>
+    <td>$69.99</td>
+    <td>10</td>
+    <td>9/10</td>
   </tr>
   <tr>
-    <td>James</td>
-    <td>Machakos</td>
-    <td>0721567654</td>
-    <td>Oranges</td>
-    <td>Sweet</td>
+    <td>Zelda: Tears of Kingdom</td>
+    <td>Switch</td>
+    <td>$59.99</td>
+    <td>18</td>
+    <td>10/10</td>
   </tr>
   <tr>
-    <td>Mary</td>
-    <td>Kisii</td>
-    <td>0727123456</td>
-    <td>Avocado</td>
-    <td>Creamy</td>
+    <td>Halo Infinite</td>
+    <td>Xbox</td>
+    <td>$49.99</td>
+    <td>14</td>
+    <td>8/10</td>
   </tr>
 </table>
+
+</div> <!-- ← ADD THIS -->
 
 </body>
 </html>
